--- a/src/sass/codemirror.scss
+++ b/src/sass/codemirror.scss
@@ -6,7 +6,10 @@
 	background: none;
 	position: absolute; // need this, and a wrapper with `position:relative` to work in a flexbox
 	box-sizing: border-box;
-
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	box-shadow: inset 0 1px 1px rgba(0, 0, 0, .075); /* Bootstrap 3 */
+	box-shadow: none; /* Bootstrap 4 */
 	div.CodeMirror-cursor {
 		pointer-events: none; /* this doesn't work in IE<11 */
 		border-left: 1px solid $doc-black;
