--- a/src/sass/codemirror.scss
+++ b/src/sass/codemirror.scss
@@ -14,6 +14,8 @@
 		pointer-events: none; /* this doesn't work in IE<11 */
 		border-left: 1px solid $doc-black;
 	}
+	
+	width: 750px;
 }
 
 .CodeMirror-selected {
